moved buffer display to css file

--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 <link href=css/trains-2d.css rel=stylesheet>
 
 <canvas id=canvas></canvas>
-<canvas id=buffer style=display:none></canvas>
-<canvas id=buffer-static style=display:none></canvas>
+<canvas id=buffer></canvas>
+<canvas id=buffer-static></canvas>
 
 <script src=js/trains-2d.js></script>
