replaced css with iterami/common css

--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <!doctype html>
 <meta charset=utf-8>
 <title>Trains-2D.htm</title>
-<link href=css/trains-2d.css rel=stylesheet>
+<link href=../common/css/canvas.css rel=stylesheet>
 
 <canvas id=canvas></canvas>
 <canvas id=buffer></canvas>
