--- a/index.htm
+++ b/index.htm
@@ -7,4 +7,5 @@
 <canvas id=buffer></canvas>
 <canvas id=buffer-static></canvas>
 
+<script src=../common/js/canvas.js></script>
 <script src=js/trains-2d.js></script>
