switched to common random.js usage

--- a/index.htm
+++ b/index.htm
@@ -8,4 +8,5 @@
 <canvas id=buffer-static></canvas>
 
 <script src=../common/js/canvas.js></script>
+<script src=../common/js/random.js></script>
 <script src=js/trains-2d.js></script>
