added common core.js usage

--- a/index.htm
+++ b/index.htm
@@ -2,6 +2,7 @@
 <meta charset=utf-8>
 <title>Trains-2D.htm</title>
 <link href=../common/css/canvas.css rel=stylesheet>
+<script src=../common/js/core.js></script>
 <script src=../common/js/canvas.js></script>
 <script src=../common/js/random.js></script>
 <script src=js/trains-2d.js></script>
