--- a/index.htm
+++ b/index.htm
@@ -5,4 +5,5 @@
 <link href=../common/css/canvas.css rel=stylesheet>
 <script src=../common/js/core.js></script>
 <script src=../common/js/canvas.js></script>
+<script src=../common/js/data.js></script>
 <script src=js/trains-2d.js></script>
