renamed JS file to main.js

--- a/index.htm
+++ b/index.htm
@@ -6,4 +6,4 @@
 <script src=../common/js/core.js></script>
 <script src=../common/js/canvas.js></script>
 <script src=../common/js/data.js></script>
-<script src=js/trains-2d.js></script>
+<script src=js/main.js></script>
