--- a/index.htm
+++ b/index.htm
@@ -8,4 +8,4 @@
 <script src=../common/js/entity.js></script>
 <script src=../common/js/canvas.js></script>
 <script src=../common/js/prefabs/canvas.js></script>
-<script src=js/main.js></script>
+<script src=repo.js></script>
